Sun Apr 01 05:53:29 BST 2007  Olly Betts <olly@survex.com>

	* common/tcpserver.h,net/tcpserver.cc: TcpServer's port member
	  variable is set but never used so remove it.

Sun Apr 01 03:27:30 BST 2007  Olly Betts <olly@survex.com>

	* bin/Makefile.mk,examples/Makefile.mk: Add $(EXEEXT) to dependency on
	  binaries in man page generation rules so they work on Windows.

Sat Mar 31 22:17:55 BST 2007  Olly Betts <olly@survex.com>

	* common/multimatch.h,matcher/multimatch.cc: When using a MatchDecider
	  with remote database(s), don't rerun the MatchDecider on documents
	  which a remote server has already checked.

Sat Mar 31 10:44:26 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Sort out path to xapian-tcpsrv
	  under mingw.  If neither HAVE_FORK nor __WIN32__ is defined,
	  make compilation fail with a suitable #error.

Sat Mar 31 10:17:06 BST 2007  Olly Betts <olly@survex.com>

	* api/Makefile,backends/Makefile,backends/flint/Makefile,
	  backends/inmemory/Makefile,backends/multi/Makefile,
	  backends/quartz/Makefile,backends/remote/Makefile,bin/Makefile,
	  common/Makefile,examples/Makefile,getopt/Makefile,include/Makefile,
	  languages/Makefile,matcher/Makefile,net/Makefile,
	  queryparser/Makefile,tests/harness/Makefile: Don't pass $(MAKEFLAGS)
	  on the command line to $(MAKE) when invoking the top level Makefile
	  from a static Makefile.  It's passed automatically anyway, and also
	  $(MAKEFLAGS) doesn't have a leading '-' so "make -s" tries to do
	  "make s" at the top level.

Sat Mar 31 09:28:06 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Fix end of loop handling.

Sat Mar 31 09:03:26 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Fix to compile.

Sat Mar 31 07:53:25 BST 2007  Olly Betts <olly@survex.com>

	* common/safewindows.h,common/safewinsock2.h: safewindows.h is
	  included by a lot of files so we want to keep it lightweight
	  so split winsock2.h related stuff into safewinsock2.h.